# egobot_v2

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  users_events_data.xlsx
